tree-sitter-pickbasic/test/corpus/file_io.txt
================================================================================
OPEN statement
================================================================================

OPEN "CUSTOMERS" TO CUST.FILE THEN PRINT "OPENED"

--------------------------------------------------------------------------------

(source_file
  (open_statement
    (string)
    (identifier)
    (print_statement
      (print_list
        (string)))))

================================================================================
OPEN with DICT
================================================================================

OPEN "DICT", "CUSTOMERS" TO DICT.FILE ELSE STOP

--------------------------------------------------------------------------------

(source_file
  (open_statement
    (string)
    (string)
    (identifier)
    (stop_statement)))

================================================================================
READ statement
================================================================================

READ REC FROM CUST.FILE, ID ELSE PRINT "NOT FOUND"

--------------------------------------------------------------------------------

(source_file
  (read_statement
    (identifier)
    (identifier)
    (identifier)
    (print_statement
      (print_list
        (string)))))

================================================================================
WRITE statement
================================================================================

WRITE REC ON CUST.FILE, ID

--------------------------------------------------------------------------------

(source_file
  (write_statement
    (identifier)
    (identifier)
    (identifier)))

================================================================================
READU statement
================================================================================

READU REC FROM CUST.FILE, ID ELSE PRINT "NOT FOUND"

--------------------------------------------------------------------------------

(source_file
  (read_statement
    (identifier)
    (identifier)
    (identifier)
    (print_statement
      (print_list
        (string)))))

================================================================================
READV statement
================================================================================

READV NAME FROM CUST.FILE, ID, 1 ELSE NAME = ""

--------------------------------------------------------------------------------

(source_file
  (read_statement
    (identifier)
    (identifier)
    (identifier)
    (number)
    (assignment_statement
      (lvalue (identifier))
      (string))))

================================================================================
WRITEV statement
================================================================================

WRITEV NAME ON CUST.FILE, ID, 1

--------------------------------------------------------------------------------

(source_file
  (write_statement
    (identifier)
    (identifier)
    (identifier)
    (number)))

================================================================================
DELETE statement
================================================================================

DELETE CUST.FILE, ID

--------------------------------------------------------------------------------

(source_file
  (delete_statement
    (identifier)
    (identifier)))

================================================================================
SELECT statement
================================================================================

SELECT CUST.FILE

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)))

================================================================================
SELECT with TO
================================================================================

SELECT CUST.FILE TO MYLIST

--------------------------------------------------------------------------------

(source_file
  (select_statement
    (identifier)
    (identifier)))

================================================================================
READNEXT statement
================================================================================

READNEXT ID ELSE DONE = 1

--------------------------------------------------------------------------------

(source_file
  (readnext_statement
    (identifier)
    (assignment_statement
      (lvalue (identifier))
      (number))))

================================================================================
CLEARFILE statement
================================================================================

CLEARFILE TEMP.FILE

--------------------------------------------------------------------------------

(source_file
  (clearfile_statement
    (identifier)))

================================================================================
LOCK statement
================================================================================

LOCK 0 THEN PRINT "LOCKED"

--------------------------------------------------------------------------------

(source_file
  (lock_statement
    (number)
    (print_statement
      (print_list
        (string)))))

================================================================================
UNLOCK statement
================================================================================

UNLOCK 0

--------------------------------------------------------------------------------

(source_file
  (unlock_statement
    (number)))

================================================================================
MATREAD statement
================================================================================

MATREAD REC FROM CUST.FILE, ID ELSE MAT REC = ""

--------------------------------------------------------------------------------

(source_file
  (matread_statement
    (identifier)
    (identifier)
    (identifier)
    (mat_statement
      (identifier)
      (string))))

================================================================================
MATWRITE statement
================================================================================

MATWRITE REC ON CUST.FILE, ID

--------------------------------------------------------------------------------

(source_file
  (matwrite_statement
    (identifier)
    (identifier)
    (identifier)))

================================================================================
LOCATE statement
================================================================================

LOCATE VAL IN LIST SETTING POS THEN PRINT "FOUND"

--------------------------------------------------------------------------------

(source_file
  (locate_statement
    (identifier)
    (identifier)
    (identifier)
    (print_statement
      (print_list
        (string)))))

================================================================================
RELEASE statement no args
================================================================================

RELEASE

--------------------------------------------------------------------------------

(source_file
  (release_statement))

================================================================================
READT statement
================================================================================

READT REC ELSE PRINT "END OF TAPE"

--------------------------------------------------------------------------------

(source_file
  (readt_statement
    (identifier)
    (print_statement
      (print_list
        (string)))))

================================================================================
WRITET statement
================================================================================

WRITET REC ON 0

--------------------------------------------------------------------------------

(source_file
  (writet_statement
    (identifier)
    (number)))

================================================================================
WEOF statement
================================================================================

WEOF 0

--------------------------------------------------------------------------------

(source_file
  (weof_statement
    (number)))

================================================================================
READU with LOCKED clause
================================================================================

READU REC FROM F, ID LOCKED PRINT "LOCKED" THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (read_statement
    (identifier)
    (identifier)
    (identifier)
    (print_statement
      (print_list
        (string)))
    (print_statement
      (print_list
        (string)))))

================================================================================
OPEN with ON ERROR
================================================================================

OPEN "CUSTOMERS" TO F ON ERROR STOP THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (open_statement
    (string)
    (identifier)
    (stop_statement)
    (print_statement
      (print_list
        (string)))))

================================================================================
READ with ON ERROR
================================================================================

READ REC FROM F, ID ON ERROR STOP THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (read_statement
    (identifier)
    (identifier)
    (identifier)
    (stop_statement)
    (print_statement
      (print_list
        (string)))))

================================================================================
LOCK with LOCKED clause
================================================================================

LOCK 0 LOCKED PRINT "LOCKED" THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (lock_statement
    (number)
    (print_statement
      (print_list
        (string)))
    (print_statement
      (print_list
        (string)))))
