tree-sitter-pickbasic/test/corpus/statements.txt
================================================================================
Assignment statement
================================================================================

X = 5

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (number)))

================================================================================
Assignment with expression
================================================================================

TOTAL = PRICE * QTY + TAX

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (binary_expression
        (identifier)
        (identifier))
      (identifier))))

================================================================================
DIM statement
================================================================================

DIM A(10), B(5,3)

--------------------------------------------------------------------------------

(source_file
  (dim_statement
    (dim_spec (identifier) (number))
    (dim_spec (identifier) (number) (number))))

================================================================================
COMMON statement
================================================================================

COMMON /SHARED/ X, Y, Z

--------------------------------------------------------------------------------

(source_file
  (common_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
EQUATE statement
================================================================================

EQU AM TO CHAR(254)

--------------------------------------------------------------------------------

(source_file
  (equate_statement
    (identifier)
    (function_call
      name: (identifier)
      (number))))

================================================================================
SUBROUTINE statement
================================================================================

SUBROUTINE MYSUB(A, B, C)

--------------------------------------------------------------------------------

(source_file
  (subroutine_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
PRINT statement
================================================================================

PRINT "Hello, World!"

--------------------------------------------------------------------------------

(source_file
  (print_statement
    (print_list
      (string))))

================================================================================
CRT statement
================================================================================

CRT "Enter name: ":

--------------------------------------------------------------------------------

(source_file
  (crt_statement
    (print_list
      (string))))

================================================================================
PRINT with multiple items
================================================================================

PRINT X, Y, Z

--------------------------------------------------------------------------------

(source_file
  (print_statement
    (print_list
      (identifier)
      (identifier)
      (identifier))))

================================================================================
INPUT statement
================================================================================

INPUT ANSWER

--------------------------------------------------------------------------------

(source_file
  (input_statement
    (identifier)))

================================================================================
DATA statement
================================================================================

DATA "SMITH", "JONES", "BROWN"

--------------------------------------------------------------------------------

(source_file
  (data_statement
    (string)
    (string)
    (string)))

================================================================================
PROMPT statement
================================================================================

PROMPT "?"

--------------------------------------------------------------------------------

(source_file
  (prompt_statement
    (string)))

================================================================================
STOP statement
================================================================================

STOP

--------------------------------------------------------------------------------

(source_file
  (stop_statement))

================================================================================
ABORT statement
================================================================================

ABORT "Program terminated"

--------------------------------------------------------------------------------

(source_file
  (abort_statement
    (string)))

================================================================================
END statement
================================================================================

END

--------------------------------------------------------------------------------

(source_file
  (end_statement))

================================================================================
PRECISION statement
================================================================================

PRECISION 4

--------------------------------------------------------------------------------

(source_file
  (precision_statement
    (number)))

================================================================================
SLEEP statement
================================================================================

SLEEP 10

--------------------------------------------------------------------------------

(source_file
  (sleep_statement
    (number)))

================================================================================
NULL statement
================================================================================

NULL

--------------------------------------------------------------------------------

(source_file
  (null_statement))

================================================================================
HEADING statement
================================================================================

HEADING "REPORT PAGE 'PL'"

--------------------------------------------------------------------------------

(source_file
  (heading_statement
    (string)))

================================================================================
FOOTING statement
================================================================================

FOOTING "PAGE 'PL'"

--------------------------------------------------------------------------------

(source_file
  (footing_statement
    (string)))

================================================================================
PRINTER ON/OFF
================================================================================

PRINTER ON

--------------------------------------------------------------------------------

(source_file
  (printer_statement))

================================================================================
BREAK ON/OFF
================================================================================

BREAK OFF

--------------------------------------------------------------------------------

(source_file
  (break_statement))

================================================================================
ECHO ON/OFF
================================================================================

ECHO ON

--------------------------------------------------------------------------------

(source_file
  (echo_statement))

================================================================================
EXECUTE statement
================================================================================

EXECUTE "LIST CUSTOMERS" CAPTURING OUTPUT

--------------------------------------------------------------------------------

(source_file
  (execute_statement
    (string)
    (identifier)))

================================================================================
CHAIN statement
================================================================================

CHAIN "NEXTPROG"

--------------------------------------------------------------------------------

(source_file
  (chain_statement
    (string)))

================================================================================
CALL statement
================================================================================

CALL MYSUB(A, B, C)

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
CALL with indirect reference
================================================================================

CALL @SUBNAME(X)

--------------------------------------------------------------------------------

(source_file
  (call_statement
    (identifier)
    (identifier)))

================================================================================
Comment with REM
================================================================================

REM This is a comment

--------------------------------------------------------------------------------

(source_file
  (inline_comment))

================================================================================
Comment with asterisk
================================================================================

* This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment with exclamation
================================================================================

! This is a comment

--------------------------------------------------------------------------------

(source_file
  (inline_comment))

================================================================================
Numeric label
================================================================================

100 PRINT "HELLO"

--------------------------------------------------------------------------------

(source_file
  (label
    name: (label_name))
  (print_statement
    (print_list
      (string))))

================================================================================
Multiple statements on one line
================================================================================

X = 1; Y = 2; Z = 3

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (number))
  (assignment_statement
    (lvalue (identifier))
    (number))
  (assignment_statement
    (lvalue (identifier))
    (number)))

================================================================================
Dynamic array reference
================================================================================

X<1> = "VALUE"

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue
      (dynamic_array_ref
        (identifier)
        (number)))
    (string)))

================================================================================
Dynamic array with multiple subscripts
================================================================================

X<1,2,3> = "VALUE"

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue
      (dynamic_array_ref
        (identifier)
        (number)
        (number)
        (number)))
    (string)))

================================================================================
CLEAR statement
================================================================================

CLEAR

--------------------------------------------------------------------------------

(source_file
  (clear_statement))

================================================================================
PROCREAD statement
================================================================================

PROCREAD X ELSE STOP

--------------------------------------------------------------------------------

(source_file
  (procread_statement
    (identifier)
    (stop_statement)))

================================================================================
PROCWRITE statement
================================================================================

PROCWRITE "PQ"

--------------------------------------------------------------------------------

(source_file
  (procwrite_statement
    (string)))

================================================================================
MAT assignment
================================================================================

MAT A = ""

--------------------------------------------------------------------------------

(source_file
  (mat_statement
    (identifier)
    (string)))

================================================================================
RQM statement
================================================================================

RQM

--------------------------------------------------------------------------------

(source_file
  (rqm_statement))

================================================================================
PAGE statement
================================================================================

PAGE

--------------------------------------------------------------------------------

(source_file
  (page_statement))

================================================================================
RELEASE statement
================================================================================

RELEASE

--------------------------------------------------------------------------------

(source_file
  (release_statement))

================================================================================
RETURN statement
================================================================================

RETURN

--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
RETURN TO statement
================================================================================

RETURN TO 100

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (number)))

================================================================================
REWIND statement
================================================================================

REWIND

--------------------------------------------------------------------------------

(source_file
  (rewind_statement))

================================================================================
EQUATE LITERALLY
================================================================================

EQU COMMA LITERALLY ","

--------------------------------------------------------------------------------

(source_file
  (equate_statement
    (identifier)
    (string)))

================================================================================
SLEEP bare (no argument)
================================================================================

SLEEP

--------------------------------------------------------------------------------

(source_file
  (sleep_statement))

================================================================================
@variable system variable
================================================================================

X = @AM

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (at_variable)))
